--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,7 +8,15 @@
 
 }
 
-
+.App {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 7fr;
+  height: 100vh; 
+  width: 100vw;
+  color: var(--primary-text-color);
+  background-color: var(--main-background-color);
+}
 
 
 
