--- a/src/Components/Sidebar/sidebar.css
+++ b/src/Components/Sidebar/sidebar.css
@@ -6,5 +6,6 @@
     background-size: cover;
     background-position: center center;
     border-radius: 0px 20px 0px 0px;
+    overflow: auto; 
   
   }
