--- a/src/Components/Sidebar/GetPlaylist/getPlaylist.css
+++ b/src/Components/Sidebar/GetPlaylist/getPlaylist.css
@@ -2,10 +2,109 @@
     display:flex;
     flex-direction: column;
 
-    padding: 1rem;
+    gap:1rem;
+
+}
+.single-playlist-container{
+    display: flex;
+    flex-direction: row;
+    width:100%;
+    justify-content: flex-start;
+    align-content: center;
+    gap:1.5rem;
+    padding:1rem;
+    background-color: rgba(0, 0, 0, 0.093);
+    transition: all 500ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    cursor: pointer;
+    will-change: transform;
+}
+
+.single-playlist-container:hover{
+    color: #000000;
+    background-color:var(--secondary-background-color);
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
 
 }
 
+.single-playlist-container:active{
+    background-color:var(--button-hover-color);
+    box-shadow: none;
+    transform: translateY(0);
+
+}
+.single-playlist-container:focus {
+    border-color: rgba(0, 0, 0, 0.985);
+    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+    color: rgba(0, 0, 0, 0.65);
+  }
+  
 .playlist-image{
+    display: flex;
     width:4rem;
+    height:4rem;
+   
+}
+
+.playlist-info{
+    display:flex;
+    flex-direction: column;
+    gap:1rem;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+
+
+
+/* otherthings  */
+
+
+
+/* CSS */
+.button-28 {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #3B3B3B;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  will-change: transform;
+}
+
+.button-28:disabled {
+  pointer-events: none;
+}
+
+.button-28:hover {
+
+  /* background-color: #1A1A1A; */
+  background-color:var(--secondary-background-color);
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button-28:active {
+  box-shadow: none;
+  transform: translateY(0);
 }
