--- a/src/Components/Sidebar/sidebar.css
+++ b/src/Components/Sidebar/sidebar.css
@@ -1,3 +1,5 @@
+
+
 .sideBar{
     grid-column: 1;
     grid-row: 2/3;
@@ -8,4 +10,9 @@
     border-radius: 0px 20px 0px 0px;
     overflow: auto; 
   
+  }
+  .sideBar-title{
+    font-size: var(--subtitle-size);
+    justify-self: center;
+    padding:2rem;
   }
