addon to the last merge, -- working copy--

--- a/src/Components/Sidebar/sidebar.css
+++ b/src/Components/Sidebar/sidebar.css
@@ -2,7 +2,7 @@
     grid-column: 1;
     grid-row: 2/3;
     justify-content: center;
-    background-image:url('/assets/sideBar-bakcground.png') ;
+    background-image:url('C:\Users\Sofjim\Desktop\pandemicsound\v2\Pandemic-Sound-\public\assets\sideBar-bakcground.png') ;
     background-size: cover;
     background-position: center center;
     border-radius: 0px 20px 0px 0px;
