Add css to landingpage, move css from app to main

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,6 +18,10 @@
   --text-font:"Encode Sans Semi Expanded", serif;
  
 }
+* {
+  font-family: var(--text-font);
+  font-weight: 500;
+}
 
 .app {
   display: grid;
