--- a/src/Components/Sidebar/GetPlaylist/getPlaylist.css
+++ b/src/Components/Sidebar/GetPlaylist/getPlaylist.css
@@ -1,8 +1,9 @@
 .playlistContainer{
     display:flex;
     flex-direction: column;
-
     gap:1rem;
+    overflow: scroll;
+
 
 }
 .single-playlist-container{
