--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -11,3 +11,29 @@
   font-size: 1.5rem;
   margin-left: 1rem;
 }
+
+
+
+.profile-container {
+  position: absolute;
+  right: 40px; 
+  top: 10px; 
+}
+
+.profile-image {
+  width: 40px; 
+  height: 40px; 
+  border-radius: 50%; 
+  object-fit: cover; 
+  border: 2px solid #fff; 
+  cursor: pointer; 
+  transition: transform 0.3s ease-in-out;
+
+}
+
+.profile-image:hover {
+  transform: scale(1.15) rotate(5deg); 
+  border-color: #B09FFF; 
+  box-shadow: 0 0 12px #488bde;
+  cursor: pointer;
+}
