--- a/src/Components/Sidebar/sidebar.css
+++ b/src/Components/Sidebar/sidebar.css
@@ -7,6 +7,8 @@
     background-position: center center;
     border-radius: 0px 20px 0px 0px;
     overflow: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: #000000;
   
   }
 
