fixed display new playlist bug (#19)
* added main files jsx and css

* app style layout and root colors

* main style for sidebar and background

* main nav style

* main homepage style

* back to the past

* merged api and main files

* fetched playlist

* saved playlists items in state

* displayed user playlists name and number of songs

* fetchingplaylist working

* hover and active on sidebar playlist container

* router for playlists

* half done wih context tracks trials

* created button to add new playlist if there is no playlists

* merged with songs

* track url to local storage and as props to displayPlaylist

* changed props to navigate

* created playlist add component

* created add playlist

* add playlist and rerender fetch, changed fetch to sidebar

* before merging

* no conflicts with merge

* fixed playlist display for playlist withouth images or name

--- a/src/Components/Sidebar/sidebar.css
+++ b/src/Components/Sidebar/sidebar.css
@@ -2,11 +2,13 @@
     grid-column: 1;
     grid-row: 2/3;
     justify-content: center;
-    background-image:url('../../../public/assets/sideBar-bakcground.png') ;
+    background-image:url("../../../public/assets/sideBar-bakcground.png") ;
     background-size: cover;
     background-position: center center;
     border-radius: 0px 20px 0px 0px;
     overflow: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: #000000;
   
   }
 
