--- a/src/Components/PlaylistDisplay/playlistDisplay.css
+++ b/src/Components/PlaylistDisplay/playlistDisplay.css
@@ -31,21 +31,22 @@
 }
 .dropdown-item {
     cursor: pointer;
-    padding: 12px 16px;
     background-color: #ffffff;
     color: #333333;
-    transition: all 0.2s ease;
-    border-bottom: 1px solid #eaeaea;
-    width: 100%;
-    text-align: left;
-    font-size: 14px;
 }
 
 .dropdown-item:hover {
     background-color: #f5f5f5;
-    color: #000000;
-}
+    color: #a41b1b;
 
+}
+button {
+}
 .dropdown-item:last-child {
     border-bottom: none;
 }
+.dropdown {
+    position: absolute;
+    right: 0;
+}
+
