--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -8,10 +8,11 @@
   }
 .logo{
   font-family: var(--logo-font);
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   margin-left: 1rem;
+  text-decoration: none;
+  color: var(  --primary-text-color)
 }
-
 
 
 .profile-container {
