--- a/src/Components/PlaylistDisplay/playlistDisplay.css
+++ b/src/Components/PlaylistDisplay/playlistDisplay.css
@@ -8,6 +8,10 @@
     font-size: var(--subtitle-size);
     padding: 2rem;
 }
+.playlist-title-input{
+    font-size: var(--subtitle-size);
+
+}
 .display-playlist-img{
    
     width: 40%;
@@ -17,7 +21,6 @@
     width: 10%;
     height: auto;
 }
-
 .track{
     display: flex;
     align-items: center;
@@ -25,4 +28,47 @@
 }
 .trackDetails {
     margin-left: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
 }
+.dropdown-item {
+    cursor: pointer;
+    background-color: #ffffff;
+    color: #333333;
+}
+
+.dropdown-item:hover {
+    background-color: #f5f5f5;
+    color: #a41b1b;
+
+}
+.edit-playlist-btn {
+    background-image: url("../../../public/assets/edit-btn.png");
+    background-size: contain;
+    width: 2rem;
+    height: 2rem;
+    margin-left: 2rem;
+    border-style: none;
+    cursor:pointer;
+    transition: all 0.3s ease;
+}
+
+.edit-playlist-btn:hover {
+    background-image: url("../../../public/assets/edit-btn-purple.png");
+    background-size: contain;
+    width: 2rem;
+    height: 2rem;
+    margin-left: 2rem;
+    border-style: none;
+    transform: scale(1.2);
+}
+
+.dropdown-item:last-child {
+    border-bottom: none;
+}
+.dropdown {
+    right: 0;
+}
+
