--- a/src/Components/Main/NavigationArrows/navigationArrows.css
+++ b/src/Components/Main/NavigationArrows/navigationArrows.css
@@ -1,11 +1,12 @@
 .navigation-arrow-container {
     position:fixed;
+    z-index: 9999;
     top: 150px;
-    left: 400px;
+    left: 30%;
 }
 
 .navigation-arrow-btn {
     width:3rem;
-    height:3rem;
+    height:2rem;
 
 }
