--- a/src/Components/Nav/SearchBar/searchbar.css
+++ b/src/Components/Nav/SearchBar/searchbar.css
@@ -1,7 +1,6 @@
 .searchContainer {
     display: flex;
     justify-content: center;
-    padding: 2rem;
     width: 100%;
   }
   
@@ -10,10 +9,9 @@
     align-items: center;
     gap: 1rem;
     width: 100%;
-    max-width: 600px;
+    max-width: 90%;
     padding: 1rem;
     background-color: rgba(0, 0, 0, 0.093);
-    border-radius: 25px;
     transition: all 500ms cubic-bezier(.23, 1, 0.32, 1);
     user-select: none;
     -webkit-user-select: none;
@@ -22,19 +20,9 @@
     will-change: transform;
   }
   
-  .searchBarWrapper:hover {
-    /* background-color: var(--secondary-background-color);
-    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px; */
-    transform: translateY(-2px);
-  }
-  
-  .searchBarWrapper:active {
-    background-color: var(--button-hover-color);
-    box-shadow: none;
-    transform: translateY(0);
-  }
-  
+
   .searchBarWrapper input {
+    
     padding: 0.75rem 1rem;
     border: 2px solid #444;
     border-radius: 25px;
@@ -78,68 +66,49 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
   }
   
-  .goHome {
-    font-size: var(--normal-text-size);
-    color: var(--primary-text-color);
-    text-decoration: none;
-    transition: all 0.3s ease;
-  }
-  
-  .goHome:hover {
-    color: var(--highlight-text-color);
-    text-decoration: underline;
-  }
-/*    
+
+  @media (max-width: 600px) {
+
     .searchContainer {
       display: flex;
       justify-content: center;
-      align-items: center;
+      padding: 0rem;
+      width: 100%;
+      font-size: 0.7rem;
     }
     
     .searchBarWrapper {
-      display: flex;
-      align-items: center;
-      background: linear-gradient(135deg, #9b59b6, #B09FFF); 
-      border-radius: 50px;
-      padding: 10px 20px;
-      width: 500px; 
-      height: 40px;
-      color: #fff;
-      box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.15); 
-      transition: all 0.3s ease-in-out;
-      padding-top: 10px;
-    }
+      min-width: 300px;
+   
+      background-color: rgba(0, 0, 0, 0.093);
+      border-radius: 25px;
     
-    .searchBarWrapper:hover {
-      box-shadow: inset 0 0 8px rgba(255, 255, 255, 0.3); 
     }
-    
+
     .searchBarWrapper input {
-      flex: 1;
-      background: transparent;
-      border: none;
-      outline: none;
-      color: #fff;
-      font-size: 16px;
-      padding: 8px 12px;
-    }
+      padding: 0.1rem 1rem;
+      max-width: 450px;
     
-    .searchBarWrapper input::placeholder {
-      color: rgba(255, 255, 255, 0.7);
     }
-    
+
     .searchButton {
-      background: transparent;
-      border: none;
-      color: rgba(255, 255, 255, 0.7);
-      cursor: pointer;
-      font-size: 18px;
-      padding: 8px;
-      transition: color 0.3s ease, transform 0.2s ease;
+      display:none;
+      padding: 0.3rem 0.5rem;
+      font-size:0.7rem;
+      font-weight: 500;
+   
+
     }
-    
-    .searchButton:hover {
-      color: rgba(255, 255, 255, 1);
-      transform: scale(1.1); /* Slight button zoom on hover */
-    /* } */
+    .searchBarWrapper input::placeholder {
+      font-size: 0.7rem;;
+    }
+   
+   
+   }
+   
+   @media (min-width: 768px) {
+   
+
+   
+   }
      
