--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -11,21 +11,21 @@
   font-size: 1.7rem;
   margin-left: 1rem;
   text-decoration: none;
+  text-align: center;
   color: var(  --primary-text-color)
 }
 
 .profile-container {
-  position: absolute;
-  right: 40px; 
-  top: 10px; 
+
+
 }
 
 .profile-image {
-  width: 40px; 
-  height: 40px; 
+  width: 3rem; 
+  height: 3rem; 
   border-radius: 50%; 
   object-fit: cover; 
-  border: 2px solid #fff; 
+  border: 1.5px solid #ffffff; 
   cursor: pointer; 
   transition: transform 0.3s ease-in-out;
 
@@ -36,4 +36,33 @@
   border-color: #B09FFF; 
   box-shadow: 0 0 12px #488bde;
   cursor: pointer;
+}
+
+@media (max-width: 600px) {
+ .Nav{
+
+  grid-template-columns: 1fr 5.5fr 0.5fr;
+
+ }
+ .logo{
+  font-size: 0.7rem;
+
+}
+
+.profile-image {
+  width: 2rem; 
+  height: 2rem; 
+
+}
+
+}
+
+@media (min-width: 768px) {
+
+  .logo{
+    font-size: 1.3rem;
+  
+  }
+
+
 }
