--- a/src/Components/PlaylistDisplay/track.css
+++ b/src/Components/PlaylistDisplay/track.css
@@ -12,9 +12,10 @@
   
 .single-Track-Container:hover {
     color: var(--primary-text-color);
-    background-color: var(--secondary-background-color);
+    /* background-color: var(--secondary-background-color); */
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
+    background-color:#333333;
   }
   
   .single-Track-Container:active {
