--- a/src/Components/Sidebar/sidebar.css
+++ b/src/Components/Sidebar/sidebar.css
@@ -6,7 +6,7 @@
     background-size: cover;
     background-position: center center;
     border-radius: 0px 20px 0px 0px;
-    overflow: scroll;
+    overflow: hidden;
     scrollbar-width: thin;
     scrollbar-color: #000000;
   
@@ -16,11 +16,53 @@
     display:flex;
     height: fit-content;
     justify-content: center;
-    gap:2rem;
+    gap:1rem;
     padding:3rem 0rem;
 
   }
 
   .sideBar-title{
     font-size: var(--subtitle-size);
+    font-weight: 400;
+    letter-spacing: 2px;
   }
+
+  @media (max-width: 600px) {
+
+    .sideBar-title{
+      font-size: 1.1rem;
+      font-weight: bold;
+  
+
+    }
+
+    .title-sidebar-container{
+      flex-direction: column;
+      justify-items: center;
+      align-items: center;
+      gap:1rem;
+      padding:1.5rem 0rem;
+  
+    }
+  }
+
+  @media (max-width: 768px) {
+
+    .title-sidebar-container{
+   
+      justify-items: center;
+      align-items: center;
+      gap:1rem;
+      padding:1.5rem 0rem;
+  
+    }
+
+    .sideBar-title{
+      font-size: var(--normal-text-size);
+      font-weight: bold;
+  
+
+    }
+  }
+
+  @media  (min-width: 992px) {}
