--- a/src/Components/Layout/NavigationArrows/navigationArrows.css
+++ b/src/Components/Layout/NavigationArrows/navigationArrows.css
@@ -1,12 +1,66 @@
 .navigation-arrow-container {
-    position:fixed;
+    position: fixed;
     z-index: 9999;
-    top: 150px;
-    right: 30%;
+    top: 100px; 
+    left: 85%; 
+    display: flex;
+    gap: 1.5rem; 
+    align-items: center; 
+    transition: top 0.3s ease, left 0.3s ease, gap 0.3s ease;
 }
 
 .navigation-arrow-btn {
-    width:3rem;
-    height:2rem;
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--primary-background-color);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    font-size: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease, width 0.3s ease, height 0.3s ease, font-size 0.3s ease;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 4px 12px;
+}
 
+.navigation-arrow-btn:hover {
+    background-color: var(--button-hover-color);
+    transform: scale(1.05);
+}
+
+.navigation-arrow-btn:active {
+    background-color: var(--primary-text-color);
+    transform: scale(0.95);
+}
+
+
+@media (max-width: 600px) {
+    .navigation-arrow-container {
+        top: 60px; 
+        left: 75%; 
+        gap: 0.3rem; 
+    }
+
+    .navigation-arrow-btn {
+        width: 2.5rem;
+        height: 2.5rem;
+        font-size: 1.9rem;
+    }
+}
+
+
+@media (min-width: 601px) and (max-width: 768px) {
+    .navigation-arrow-container {
+        top: 120px;
+        left: 85%;  
+        gap: 1rem; 
+    }
+
+    .navigation-arrow-btn {
+        width: 2.5rem;
+        height: 2.5rem;
+        font-size: 2rem;
+    }
 }
