--- a/src/Components/Layout/Outlet/Homepage/homepage.css
+++ b/src/Components/Layout/Outlet/Homepage/homepage.css
@@ -1,35 +1,34 @@
-.releases-main-container{
+.releases-main-container {
   width: 100%;
   height: 100%;
   padding: 20px;
-  display:flex;
+  display: flex;
   flex-direction: column;
-
-
 }
 
 .realeses-title {
   font-size: var(--title-size);
-  color: var( --highlight-text-color);
+  color: var(--highlight-text-color);
   padding: 4rem 3rem;
-  
 }
 
+
+
 .new-releases {
+  justify-self: center;
+  align-self:center;
+
   display: grid;
   grid-template-columns: repeat(3, 1fr); 
-  gap: 3rem; 
-  align-self: center ;
+  gap: 3rem;
+  align-self: center;
   max-height: 80%;
-  overflow:scroll;
-  scrollbar-width: thin;
-  scrollbar-color: #888 #222;
+  overflow: scroll;
   width: 90%;
 }
 
-
 .album-card {
-  background: #121212;
+  position: relative;
   padding: 15px;
   border-radius: none;
   text-align: center;
@@ -38,12 +37,11 @@
 }
 
 .album-card:hover {
-  transform: scale(1.03);
+  background-color: #222;
 }
 
 .album-card img {
   width: 100%;
-
 }
 
 .album-card h3 {
@@ -54,26 +52,62 @@
 
 .album-card p {
   font-size: 14px;
-
   overflow: hidden;
 }
 
 .play-button {
-  /* display: block; */
-
-  background: rgba(255, 255, 255, 0.773);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgb(255, 255, 255);
   color: #000000;
   border-radius: 50%;
   width: 3rem;
   height: 3rem;
+  font-size: 2rem; /* Play button font size */
+  font-weight: 900;
   text-align: center;
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: bold;
+  line-height: 2.9rem; /* Adjust line height to center the text vertically */
   text-decoration: none;
-  transition: background 0.3s;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s, background 0.3s;
+}
+
+.album-card:hover .play-button {
+  opacity: 1;
+  pointer-events: all;
 }
 
 .play-button:hover {
-  background: rgba(255, 255, 255, 0.5);
+  background: var(--button-hover-color);
+}
+
+
+@media (max-width: 600px) {
+  .play-button {
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1.5rem; 
+    line-height: 2.4rem; 
+  }
+
+  .realeses-title {
+    font-size: var(--subtitle-size);
+    color: var(--highlight-text-color);
+    padding: 3rem 1rem;
+  }
+
+  .new-releases {
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 1.2rem 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .new-releases {
+    grid-template-columns: repeat(2, 1fr); 
+    gap:2rem;
+  }
 }
