--- a/src/Components/Layout/Outlet/SongPage/songPage.css
+++ b/src/Components/Layout/Outlet/SongPage/songPage.css
@@ -13,6 +13,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 2rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
@@ -20,7 +21,7 @@
 .buttons-container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 3rem;
   padding: 4rem 1rem;
 }
