--- a/src/Components/Layout/Sidebar/components/GetPlaylist/getPlaylist.css
+++ b/src/Components/Layout/Sidebar/components/GetPlaylist/getPlaylist.css
@@ -1,129 +1,125 @@
-.playlistContainer{
-    display:flex;
-    flex-direction: column;
-    gap:1rem;
-    overflow: scroll;
-    max-height: 85%;
-
-
+.playlistContainer {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  max-height: 85vh;
 }
-.single-playlist-container{
-    display: flex;
-    flex-direction: row;
-    width:100%;
-    justify-content: flex-start;
-    align-content: center;
-    gap:1.5rem;
-    padding:1rem;
-    background-color: rgba(0, 0, 0, 0.093);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    cursor: pointer;
-    will-change: transform;
-    font-weight: 500;
+.single-playlist-container {
+  display: flex;
+  flex-direction: row;
+  width:100%;
+  justify-content: flex-start;
+  align-content: center;
+  gap: 1.5rem;
+  padding: 1rem;
+  background-color: rgba(0, 0, 0, 0.227);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  cursor: pointer;
+  will-change: transform;
+  font-weight: 300;
+  font-size: 1.3rem;
 }
 
-.single-playlist-container:hover{
-
-    font-weight: 600;
-    background-color:#8e7ed8;
+.single-playlist-container:hover {
+  font-weight: 600;
+  background-color: #8e7ed8;
   box-shadow: rgba(77, 76, 76, 0.25) 0 8px 15px;
-  transform: translateY(-2px);
   transition: 100ms;
-
-
 }
 
-.single-playlist-container:active{
-    background-color:var(--button-hover-color);
-    box-shadow: none;
-    transform: translateY(0);
-
+.single-playlist-container:active {
+  background-color: var(--button-hover-color);
+  box-shadow: none;
+  transform: translateY(0);
 }
 .single-playlist-container:focus {
-    border-color: rgba(0, 0, 0, 0.985);
-    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
-    color: rgba(0, 0, 0, 0.65);
-  }
-  
-.playlist-image{
-    display: flex;
-    width:3.5rem;
-    height:3.5rem;
-   
+  border-color: rgba(0, 0, 0, 0.985);
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+  color: rgba(0, 0, 0, 0.65);
 }
 
-.playlist-info{
-    display:flex;
-    flex-direction: column;
-    gap:1rem;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    
-}
-.playlist-name{
-    font-size: 1.2rem;
-    font-weight: 600;
+.playlist-image {
+  display: flex;
+  width: 3.5rem;
+  height: 3.5rem;
 }
 
+.playlist-info {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+}
+.playlist-name {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
 
 @media (max-width: 600px) {
-.playlist-name{
-    padding-top: 0.3rem;
+
+  .playlist-info h4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 400;
     text-align: center;
-    
-}
- 
-.playlist-info{
-    display:flex;
-     justify-content: center;
-     align-items: center;
-     font-size: 0.7rem;
-     font-weight: bold;
-}
-  .playlist-total-tracks{
-    display:none;
+    font-size: 0.8rem;
+    overflow: hidden;
+
+    width: 90%;
   }
 
-    .playlistContainer{
-        width:100%;
-        justify-content: center;
-        margin: auto;
-        gap:0rem;
-    }
+  .playlistContainer {
+    width: 100px;
+    max-height: 85vh;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding: 1rem 0rem;
+    overflow-y: auto; 
+  }
 
-    .single-playlist-container{
-        flex-direction: column;
-        padding: 0.3rem;
-        justify-content: center;
-        align-items: center;
-        gap:0rem;
-    }
-    .playlist-image{
-        display: flex;
-        width:3rem;
-        height:3rem;
-        align-self: center;
-       
-       
-    }
+  .single-playlist-container {
+    flex-direction: column;
+    padding: 1rem 0rem;
+    gap: 0.4rem;
+    width: 100%;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+  }
 
+  .playlist-image {
+    display: flex;
+    width: 3.5rem;
+    height: 3.5rem;
+    align-self: center;
+  }
 
+  .single-playlist-container:hover {
+    font-weight: 600;
+    background-color: #8e7ed8;
+
+  }
+
+  .single-playlist-container:active {
+    background-color: var(--button-hover-color);
+  }
 }
 
 @media (max-width: 768px) {
-    .playlistContainer{
-        width:fit-content
-    }
+  .playlistContainer {
+    max-height: 85vh;
+  }
 
-    .playlist-info{
-        
-     
-        gap:0.5rem;
-        font-size: 0.8rem;
-        justify-content: flex-end;
-    }
+  .playlist-info {
+    width: 100%;
+    gap: 0.5rem;
+    font-size: 0.8rem;
+ 
+  }
 }
 
-@media  (min-width: 992px) {}
+
