more css and toggle working

--- a/src/Components/Layout/Outlet/SongPage/songPage.css
+++ b/src/Components/Layout/Outlet/SongPage/songPage.css
@@ -21,10 +21,23 @@
 .buttons-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  justify-items: center;
   gap: 3rem;
   padding: 4rem 1rem;
 }
+
+.dropdown {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.save-track-button {
+  margin-left: 80%;
+ 
+}
+
 .trackInfo {
   display: flex;
   flex-direction: column;
@@ -86,7 +99,27 @@ iframe {
 
   .buttons-container {
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
+    padding: 1rem 1rem;
+    justify-items: center;
+    align-items: center;
+  }
+  .dropdown {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .save-track-button {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.7rem;
+    width:100%
+  }
+
+  .dropdown-button {
+    font-size: 0.7rem;
   }
 
   .trackDetails {
@@ -141,5 +174,33 @@ iframe {
   .trackButtonHeart,
   .trackButtonAddtoPlaylist {
     font-size: 1rem;
+  }
+
+  .buttons-container {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 1rem;
+  }
+  .dropdown,
+  .save-track-button,
+  .dropdown-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+  }
+  .save-track-button {
+    font-size: 0.8rem;
+    margin-left: 40%;
+    width: 100%;
+  }
+
+  .dropdown-button {
+    font-size: 0.8rem;
   }
 }
