--- a/src/Components/Layout/Outlet/Homepage/homepage.css
+++ b/src/Components/Layout/Outlet/Homepage/homepage.css
@@ -59,15 +59,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgb(255, 255, 255);
+  background: rgba(255, 255, 255, 0.663);
   color: #000000;
-  border-radius: 50%;
-  width: 3rem;
+  border-radius: 25px;
+  width: 9rem;
   height: 3rem;
-  font-size: 2rem; /* Play button font size */
-  font-weight: 900;
+  font-size: 0.9rem; 
+  font-weight: 500;
   text-align: center;
-  line-height: 2.9rem; /* Adjust line height to center the text vertically */
+  line-height: 2.9rem; 
   text-decoration: none;
   opacity: 0;
   pointer-events: none;
