--- a/src/Components/Layout/Outlet/SearchPage/searchpage.css
+++ b/src/Components/Layout/Outlet/SearchPage/searchpage.css
@@ -210,7 +210,7 @@
 
 
   .track-info {
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 0.5rem;
   }
 
@@ -252,7 +252,7 @@
   }
 
   .track-info {
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 1rem;
   }
 
