--- a/src/Components/Layout/Sidebar/sidebar.css
+++ b/src/Components/Layout/Sidebar/sidebar.css
@@ -1,5 +1,4 @@
 .sideBar {
-
   grid-column: 1;
   grid-row: 2/3;
   justify-content: center;
@@ -10,16 +9,18 @@
   overflow: hidden;
   scrollbar-width: thin;
   scrollbar-color: #000000;
-  transition: transform 1s ease-in-out;
+  transition: transform 0.6s ease-in-out;
 }
+
 .sideBar.open {
   display: block;
   transform: translateX(0);
 }
+
 .sideBar.closed {
   transform: translateX(-100%);
-
 }
+
 
 .title-sidebar-container {
   display: flex;
@@ -36,75 +37,94 @@
   letter-spacing: 2px;
 }
 
-.toggle-sidebar {
 
+.toggle-sidebar {
+  display: flex;
   position: fixed;
-  top: 60px;
-  left: 0px;
-  z-index: 110;
+  top: 100px;
+  left: 0;
+  z-index: 2000;
   border: none;
   background-color: var(--secondary-background-color);
   color: rgb(0, 0, 0);
-  width: 20px;
-  height: 100%;
-  border-radius: 0px 50px 50px 0px;
-  display: flex;
+  width: 50px;
+  height: 80%;
+  border-radius: 0px 25px 25px 0px;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .toggle-sidebar.open {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: var(--secondary-background-color);
   color: rgb(0, 0, 0);
-  height: 50px;
-  width:60px;
-  top: 50px;
-  left: 50px;
-  border-radius:  50px;
+  width: 60px;
+  height: 40px;
+  top: 94px;
+  left: 23%;
+  transform: translateX(0);
+  transition: left 0.7s ease-in-out, transform 0.3s ease;
+  border-radius: 0px 25px 25px 0px;
 }
-.toggle-sidebar.open:hover {
-  background-color: rgba(0, 0, 0, 0.152);
 
 
-}
 .toggle-sidebar:hover {
   background-color: #8e7ed8;
 }
 
-.toggle-icon{
-    display: inline-block; 
-    width: 30px;           
-    height: 30px;
-    left: 0px;          
 
+
+.toggle-icon {
+  width: 20px;
+  height: 20px;
+  font-size: 2rem;
+  align-self: center;
+  justify-self:center;
+  display: flex;                  
+  justify-content: center;        
+  align-items: center;          
+  font-size: 2rem;             
+  width: 100%;                   
+  height: 100%;   
 }
+
 
 @media (max-width: 600px) {
   .sideBar {
-    display: none; 
     top: 60px;
-    left: 0px;
-    width: 100px;
+    left: 0;
+    width: 100%;
     z-index: 100;
-   
+    transition: transform 0.3s ease-in-out;
+    border-radius: 0px 0px 0px 0px;
   }
 
   .toggle-sidebar {
-    display: block;
+    display: flex;
     color: white;
-
+    top: 80px;
+    left: 0;
+    width: 30px;
+    height: 85%;
   }
+
+  .toggle-sidebar.open {
+    width: 40px;
+    height: 40px;
+    top: 59px;
+    left: 19%;
+ 
+  }
+
   .title-sidebar-container {
     gap: 1rem;
-    padding: 1rem 0rem;
+    padding: 1rem 0;
   }
 
   .sideBar-title {
-    font-size: 0.5rem;
-    padding-top: 0rem;
- 
+    font-size: 0.8rem;
+    padding-top: 0;
   }
 
   .title-sidebar-container {
@@ -115,21 +135,13 @@
     padding: 1.5rem 0.3rem;
   }
 
-  .toggle-icon{
-    display: inline-block; 
-    font-size: 2rem;
-}
-
-}
-
-@media (max-width: 768px) {
-  .title-sidebar-container {
-    justify-items: center;
-    align-items: center;
-    gap: 1rem;
-    padding: 1.5rem 0rem;
+  .toggle-icon {
+    font-size: 1.5rem;
   }
+}
 
+
+@media(min-width: 601px) and (max-width: 768px) {
   .sideBar-title {
     font-size: 1rem;
     font-weight: 400;
@@ -145,19 +157,37 @@
     padding: 1.7rem 0rem 1rem 0rem;
   }
 
+  .toggle-sidebar.open {
+    top: 94px;
+    left: 23%;
+    border-radius: 0px 25px 25px 0px;
+  }
 }
 
-@media (max-width: 992px) {
+@media (min-width: 992px) {
   .toggle-sidebar {
-    display: none;
+    display: flex;
   }
-  .sideBar{
+
+  .sideBar {
     display: block;
- 
   }
+
   .sideBar-title {
     font-size: 1.5rem;
     font-weight: 400;
-    padding-top: 0rem;
+    padding-top: 0;
+  }
+  
+  .toggle-sidebar.open {
+
+    width: 55px;
+    height: 40px;
+    top: 94px;
+    left: 23.5%;
+    border-radius: 0px 25px 25px 0px;
   }
 }
+
+
+
