--- a/src/Components/Layout/Outlet/SearchPage/searchpage.css
+++ b/src/Components/Layout/Outlet/SearchPage/searchpage.css
@@ -111,6 +111,7 @@
   cursor: pointer;
   will-change: transform;
   min-width: var(--container-width);
+  max-width: var(--container-width);
 }
 
 @media screen and (min-width: 1200px) {
