--- a/src/Components/Layout/Outlet/PlaylistPage/AddTrackToPlaylist/addToPlaylistButton.css
+++ b/src/Components/Layout/Outlet/PlaylistPage/AddTrackToPlaylist/addToPlaylistButton.css
@@ -45,6 +45,7 @@
     display: flex;
     flex-direction: column;
     z-index: 1000;
+    overflow-x: hidden;  
   }
   
 
@@ -56,7 +57,7 @@
     color: var(--primary-text-color);
     text-align: center;
     background-color: rgba(0, 0, 0, 0.82);
-    overflow: scroll;
+
 
   }
   
