--- a/src/Components/Layout/Outlet/PlaylistPage/AddTrackToPlaylist/addToSavedTracks.css
+++ b/src/Components/Layout/Outlet/PlaylistPage/AddTrackToPlaylist/addToSavedTracks.css
@@ -12,6 +12,12 @@
         width: 100%;
   }
   
+  .dropdown-menu {
+    max-height: 300px;      
+    overflow-y: scroll;  
+    overflow-x: hidden;  
+
+  }
   .save-track-button:hover {
     background-color: var(--button-hover-color);
   }
