--- a/src/Components/Layout/Outlet/SongPage/songPage.css
+++ b/src/Components/Layout/Outlet/SongPage/songPage.css
@@ -39,6 +39,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* overflow: scroll; */
 
 }
 .save-track-button {
@@ -133,11 +134,11 @@ iframe {
   }
 
   .buttons-container {
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem 1rem;
-    justify-items: center;
+    gap: 3rem;
+    padding: 1rem;
+    justify-content: center;
     align-items: center;
+    width: 100%;
   }
   .dropdown {
     display: flex;
@@ -146,11 +147,11 @@ iframe {
     width: 100%;
   }
   .save-track-button {
-    display:flex;
-    justify-content: center;
-    align-items: center;
+
     font-size: 0.7rem;
-    width:100%
+    margin-left: 40%;
+    width:auto;
+
   }
 
   .dropdown-button {
@@ -160,12 +161,20 @@ iframe {
   .trackDetails {
     padding: 2rem 0 0 0;
   }
+.iframe-container{
+  margin-left: auto;      
+  margin-right: auto; 
+  height: auto;      
 
-  iframe {
-    margin-top: 10px;
-    width: 13rem;
-    height: 5rem;
+}
+  iframe {    
+  margin-top: 10px;        
+  max-width: 15rem;        
+  height: auto;            
+  display: block;
+
   }
+
 
   .trackName {
     font-size: 1.5rem;
@@ -185,13 +194,14 @@ iframe {
   }
 }
 
-@media (max-width: 768px) {
+@media(min-width: 601px) and (max-width: 768px) {
   .songContainer {
     padding: 15px;
   }
 
   iframe {
-    height: 18rem;
+    max-width: 25rem;        
+    height: 15rem; 
   }
 
   .trackName {
@@ -212,14 +222,13 @@ iframe {
   }
 
   .buttons-container {
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
+
+    gap: 3rem;
     padding: 1rem;
     justify-content: center;
     align-items: center;
     width: 100%;
-    gap: 1rem;
+
   }
   .dropdown,
   .save-track-button,
