--- a/src/Components/Layout/Sidebar/sidebar.css
+++ b/src/Components/Layout/Sidebar/sidebar.css
@@ -10,6 +10,7 @@
   scrollbar-width: thin;
   scrollbar-color: #000000;
   transition: transform 0.6s ease-in-out;
+  overflow-x: hidden;  
 }
 
 .sideBar.open {
@@ -59,21 +60,19 @@
 .toggle-sidebar.open {
   background-color: var(--secondary-background-color);
   color: rgb(0, 0, 0);
-  width: 60px;
+  width: 40px;
   height: 40px;
-  top: 94px;
-  left: 23%;
+  top: 70px;
+  left: 21%;
   transform: translateX(0);
   transition: left 0.7s ease-in-out, transform 0.3s ease;
-  border-radius: 0px 25px 25px 0px;
+  border-radius: 50%
 }
 
 
 .toggle-sidebar:hover {
   background-color: #8e7ed8;
 }
-
-
 
 .toggle-icon {
   width: 20px;
@@ -97,7 +96,7 @@
     width: 100%;
     z-index: 100;
     transition: transform 0.3s ease-in-out;
-    border-radius: 0px 0px 0px 0px;
+    overflow-x: hidden;  
   }
 
   .toggle-sidebar {
@@ -113,7 +112,7 @@
     width: 40px;
     height: 40px;
     top: 59px;
-    left: 19%;
+    left: 20%;
  
   }
 
@@ -142,10 +141,18 @@
 
 
 @media(min-width: 601px) and (max-width: 768px) {
+  .sideBar {
+    top: 60px;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+    transition: transform 0.3s ease-in-out;
+
+  }
   .sideBar-title {
     font-size: 1rem;
     font-weight: 400;
-    padding-top: 1rem;
+    padding-top: 0rem;
   }
 
   .toggle-sidebar {
@@ -154,13 +161,13 @@
 
   .title-sidebar-container {
     gap: 1rem;
-    padding: 1.7rem 0rem 1rem 0rem;
+    padding: 0.5rem 0rem 1rem 0rem;
   }
 
   .toggle-sidebar.open {
-    top: 94px;
-    left: 23%;
-    border-radius: 0px 25px 25px 0px;
+    top: 70px;
+    left: 21%;
+
   }
 }
 
@@ -179,13 +186,10 @@
     padding-top: 0;
   }
   
-  .toggle-sidebar.open {
+  .toggle-sidebar.open { 
+    top: 70px;
+    left: 21%;
 
-    width: 55px;
-    height: 40px;
-    top: 94px;
-    left: 23.5%;
-    border-radius: 0px 25px 25px 0px;
   }
 }
 
