--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -25,8 +25,8 @@
 
 .app {
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 7fr;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 20fr;
   height: 100vh; 
   width: 100vw;
   color: var(--primary-text-color);
@@ -44,7 +44,12 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 601px) and (max-width: 768px) {
+  .app {
+    grid-template-columns: 1fr 3fr;
+  
+    }
+  
 
 
 }
